--- a/workflow/pre_vmsetup.j2
+++ b/workflow/pre_vmsetup.j2
@@ -3,4 +3,4 @@
 {# because i want to combine multiple variables together and #}
 {# send to set_stats for the next playbook #}
 vm_details: "{{ vm_details }}"
-next_job: "vm-setup"
+vm_setup_playbook: "vm-setup/create_vm.yml"
